firebase-debug.log
[debug] [2019-08-27T02:29:57.278Z] ----------------------------------------------------------------------
[debug] [2019-08-27T02:29:57.283Z] Command:       /home/mickolas/.nvm/versions/node/v11.12.0/bin/node /home/mickolas/.nvm/versions/node/v11.12.0/bin/firebase functions:shell
[debug] [2019-08-27T02:29:57.283Z] CLI Version:   7.2.4
[debug] [2019-08-27T02:29:57.283Z] Platform:      linux
[debug] [2019-08-27T02:29:57.283Z] Node Version:  v11.12.0
[debug] [2019-08-27T02:29:57.284Z] Time:          Mon Aug 26 2019 22:29:57 GMT-0400 (Eastern Daylight Time)
[debug] [2019-08-27T02:29:57.284Z] ----------------------------------------------------------------------
[debug] 
[debug] [2019-08-27T02:29:57.295Z] > command requires scopes: ["email","openid","https://www.googleapis.com/auth/cloudplatformprojects.readonly","https://www.googleapis.com/auth/firebase","https://www.googleapis.com/auth/cloud-platform"]
[debug] [2019-08-27T02:29:57.295Z] > authorizing via signed-in user
[debug] [2019-08-27T02:29:57.295Z] [iam] checking project ow-temple for permissions ["firebase.projects.get"]
[debug] [2019-08-27T02:29:57.298Z] > refreshing access token with scopes: ["email","https://www.googleapis.com/auth/cloud-platform","https://www.googleapis.com/auth/cloudplatformprojects.readonly","https://www.googleapis.com/auth/firebase","openid"]
[debug] [2019-08-27T02:29:57.298Z] >>> HTTP REQUEST POST https://www.googleapis.com/oauth2/v3/token  
 <request body omitted>
[debug] [2019-08-27T02:29:57.662Z] <<< HTTP RESPONSE 200
[debug] [2019-08-27T02:29:57.669Z] >>> HTTP REQUEST POST https://cloudresourcemanager.googleapis.com/v1/projects/ow-temple:testIamPermissions  

[debug] [2019-08-27T02:29:58.086Z] <<< HTTP RESPONSE 200
[warn] ⚠  Your requested "node" version "8" doesn't match your global version "11"
[info] ✔  functions: Emulator started at http://localhost:5000
[debug] [2019-08-27T02:29:58.561Z] [functions] Watching "/home/mickolas/developer/myserver/owtemple/functions" for Cloud Functions...
[debug] [2019-08-27T02:29:59.716Z] DEBUG: [runtime-status] Functions runtime initialized. {"cwd":"/home/mickolas/developer/myserver/owtemple/functions","node_version":"11.12.0"}
[debug] [2019-08-27T02:29:59.717Z] DEBUG: [runtime-status] Disabled runtime features: {"functions_config_helper":true,"network_filtering":true,"timeout":true,"memory_limiting":true,"admin_stubs":true} {}
[debug] [2019-08-27T02:29:59.719Z] DEBUG: [runtime-status] Resolved module firebase-admin {"declared":true,"installed":true,"version":"8.3.0","resolution":"/home/mickolas/developer/myserver/owtemple/functions/node_modules/firebase-admin/lib/index.js"}
[debug] [2019-08-27T02:29:59.721Z] DEBUG: [runtime-status] Resolved module firebase-functions {"declared":true,"installed":true,"version":"3.2.0","resolution":"/home/mickolas/developer/myserver/owtemple/functions/node_modules/firebase-functions/lib/index.js"}
[debug] [2019-08-27T02:29:59.722Z] DEBUG: [runtime-status] Resolved module firebase-functions {"declared":true,"installed":true,"version":"3.2.0","resolution":"/home/mickolas/developer/myserver/owtemple/functions/node_modules/firebase-functions/lib/index.js"}
[warn] ⚠  /home/mickolas/developer/myserver/owtemple/functions/index.js:36
app.listen(port, (5000) => console.log(`Example app listening on port ${port}!`));
                  ^^^^

SyntaxError: Unexpected number
    at Module._compile (internal/modules/cjs/loader.js:743:23)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:810:10)
    at Module.load (internal/modules/cjs/loader.js:666:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:606:12)
    at Function.Module._load (internal/modules/cjs/loader.js:598:3)
    at Module.require (internal/modules/cjs/loader.js:705:19)
    at require (internal/modules/cjs/helpers.js:14:16)
    at /home/mickolas/.nvm/versions/node/v11.12.0/lib/node_modules/firebase-tools/lib/emulator/functionsEmulatorRuntime.js:660:33
    at Generator.next (<anonymous>)
    at fulfilled (/home/mickolas/.nvm/versions/node/v11.12.0/lib/node_modules/firebase-tools/lib/emulator/functionsEmulatorRuntime.js:4:58)
[warn] ⚠  We were unable to load your functions code. (see above)
